# goddess-claw

./: .env.example  .gitignore  README.md  build.bat  start.bat
rust/: .gitignore  E2E-SETUP.md
rust/crates/api/src/: client.rs
rust/crates/api/src/providers/: mod.rs  openai_compat.rs
rust/crates/claw-cli/src/: main.rs
rust/crates/goddess-claw-web/: Cargo.toml
rust/crates/goddess-claw-web/src/: conversation.rs  index.html  main.rs  sqlite.rs
rust/crates/goddess-claw-web/src/assets/: index-CivMsHI8.js  index-Cp1CUUfO.js  index-D-cwCxkG.css  index-DjNkh8XA.css
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: oauth.rs
rust/crates/tools/src/: lib.rs
rust/e2e/: README.md  package.json  playwright.config.ts
rust/e2e/tests/: chat.spec.ts  fixtures.ts  providers.spec.ts  smoke.spec.ts  tools.spec.ts  utils.ts  visual.spec.ts
web-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web-ui/public/: manifest.json  sw.js
web-ui/src/: App.tsx  index.css  main.tsx
web-ui/src/components/: ChatArea.tsx  ConnectionIndicator.tsx  FileExplorer.tsx  MessageItem.tsx  MessageList.tsx  MobileNav.tsx  ModelModal.tsx  Sidebar.tsx  SkillsExplorer.tsx  Toaster.tsx  WorkspaceGate.tsx
web-ui/src/hooks/: useLocalFS.ts  useVoice.ts  useWebSocket.ts
web-ui/src/stores/: chatStore.ts
web-ui/src/types/: index.ts
web-ui/src/utils/: format.ts  remote.ts
